test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: reversewords
  name: reversewords
  namespace: prueba
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: reversewords
  type: ClusterIP
status:
  loadBalancer: {}
